--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script type="text/javascript" src="index.js"></script>
 <body class="b-blib">
-
-	<div  class="b-blib__train" align="center"><!--b-blib__train--></div>
+	<div  class="b-blib__header">Библиотека функциональных блоков и элементов интерфейса</div>
+	
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
 	
 </body>
 </html>
