--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 <body class="b-blib">
 	<div  class="b-blib__header">Библиотека функциональных блоков и элементов интерфейса</div>
 	
-	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
-	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
-	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
-	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
-	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
-	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
+	<script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок", "Для какого фига собственно сделан этот блок");</script>
+    <script type="text/javascript">blib.addBlock("b-blib__train", "/b-/b-train/b-train.html", "Подложка для иконок");</script>
 	
 </body>
 </html>
