--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -1,5 +1,5 @@
-<script src="/b-/b-popup-menu/b-popup-menu.js"></script>
-<script src="/b-/b-menu/b-menu.js"></script>
+<script>blib.include("b-/b-menu/b-menu");</script>
+
 <div class="b-menu" style="float:right; width:50%;">
     <div class="b-memu__selected-cell" style="border:1px solid black">сюда грузит выбраный пункт</div>
     <div class="b-memu__content" style="border:1px solid black">а сюда контент</div>
@@ -9,19 +9,19 @@
 
         <div class="b-menu b-menu_transparent_off">
             <div class="b-menu__cell" alt="марки">
-                <img src="/b-/b-popup-menu/img/test.png" />
+                <img src="p-/b-popup-menu/img/test.png" />
             </div>
 
-            <div class="b-menu__cell" alt="коллекции" data-src="/b-/b-train/b-train.html">
-                <img src="/b-/b-popup-menu/img/test.png" />
+            <div class="b-menu__cell" alt="коллекции" data-src="b-/b-train/b-train.html">
+                <img src="p-/b-popup-menu/img/test.png" />
             </div>
 
-            <div class="b-menu__cell" alt="новости" data-src="/b-/b-news/b-news.html">
-                <img src="/b-/b-popup-menu/img/test.png" />
+            <div class="b-menu__cell" alt="новости" data-src="b-/b-news/b-news.html">
+                <img src="p-/b-popup-menu/img/test.png" />
             </div>
 
             <div class="b-menu__cell" alt="вход">
-                <img src="/b-/b-popup-menu/img/test.png" />
+                <img src="p-/b-popup-menu/img/test.png" />
             </div>
         </div>
     </div>
