find order to implode blocks

--- a/p-/b-index/b-index.html
+++ b/p-/b-index/b-index.html
@@ -8,9 +8,9 @@
 </head>
 <script>
     blib.vanishLoad({});
-    blib.js("b-/b-jquery/b-jquery.js");
-    blib.js("b-/b-jquery-ui/b-jquery-ui.js");
-    blib.include("p-/b-index/b-index");
+    //blib.js("b-/b-jquery/b-jquery.js");
+    //blib.js("b-/b-jquery-ui/b-jquery-ui.js");
+    //blib.include("p-/b-index/b-index");
 </script>
 <body class="b-blib">
 	<div  class="b-blib__header">Библиотека функциональных блоков и элементов интерфейса</div>
