shake scripts when add block, answer from server is false when block list is empty

--- a/p-/b-index/b-index.html
+++ b/p-/b-index/b-index.html
@@ -7,7 +7,7 @@
 
 </head>
 <script>
-    blib.vanishLoad({});
+    blib.vanishLoad({'order':["b-/b-jquery/b-jquery.js", "b-/b-jquery-ui/b-jquery-ui.js", "p-/b-index/b-index.js"]});
     //blib.js("b-/b-jquery/b-jquery.js");
     //blib.js("b-/b-jquery-ui/b-jquery-ui.js");
     //blib.include("p-/b-index/b-index");
