first stable realisation vanishLoad()

--- a/p-/b-index/b-index.html
+++ b/p-/b-index/b-index.html
@@ -7,10 +7,7 @@
 
 </head>
 <script>
-    blib.vanishLoad({'order':["b-/b-jquery/b-jquery.js", "b-/b-jquery-ui/b-jquery-ui.js", "p-/b-index/b-index.js"]});
-    //blib.js("b-/b-jquery/b-jquery.js");
-    //blib.js("b-/b-jquery-ui/b-jquery-ui.js");
-    //blib.include("p-/b-index/b-index");
+    blib.vanishLoad({'script':false, 'order':["b-/b-jquery/b-jquery.js", "b-/b-jquery-ui/b-jquery-ui.js", "p-/b-index/b-index.js"]});
 </script>
 <body class="b-blib">
 	<div  class="b-blib__header">Библиотека функциональных блоков и элементов интерфейса</div>
