delete menu attr

--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -16,7 +16,7 @@
                 <img src="p-/b-popup-menu/img/test.png" />
             </div>
 
-            <div class="b-menu__cell" alt="новости" data-src="b-/b-news/b-news.html">
+            <div class="b-menu__cell" alt="новости" >
                 <img src="p-/b-popup-menu/img/test.png" />
             </div>
 
