--- a/b-/b-pic/b-pic.html
+++ b/b-/b-pic/b-pic.html
@@ -10,3 +10,27 @@
 	<span class="b-pic b-pic__amtel b-pic__amtel_cardgen"></span>&nbsp;
 	<span class="b-pic b-pic__amtel b-pic__amtel_tarifs"></span>&nbsp;
 </div>
+<br />
+<div style="text-align:justify">
+	<span class="b-pic b-pic__amtel b-pic__amtel_add"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_edit"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_del"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_mail"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_sms"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_one-s-mini"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_group-mail"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_excel"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_mail-storage"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_history-pay"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_history-trafic"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_history-change-mode"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_history-money-off"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_equipment-pay"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_tarif-level"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_change-password"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_tarif-mini"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_station-mini"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_client-mini"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_cardgen-mini"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_payment-mini"></span>&nbsp;
+</div>
