--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -4,7 +4,7 @@
     <div class="b-memu__selected-cell" style="border:1px solid black">сюда грузит выбраный пункт</div>
     <div class="b-memu__content" style="border:1px solid black">а сюда контент</div>
 </div>
-<div class="b-popup-menu">
+<div class="b-popup-menu b-popup-menu_style_default">
     <div class="b-popup-menu__content b-popup-menu__content_closed">
 
         <div class="b-menu b-menu_transparent_off">
