--- a/b-/b-pic/b-pic.html
+++ b/b-/b-pic/b-pic.html
@@ -1,6 +1,7 @@
 <div style="text-align:justify">
 	<a href="#" class="b-pic b-pic__amtel b-pic__amtel_enter"></a>
 	<a href="#" class="b-pic b-pic__amtel b-pic__amtel_exit"></a>
+	<a href="#" class="b-pic b-pic__amtel b-pic__amtel_forget"></a>
 	<span class="b-pic b-pic__amtel b-pic__amtel_client"></span>&nbsp;
 	<span class="b-pic b-pic__amtel b-pic__amtel_agent"></span>&nbsp;
 	<span class="b-pic b-pic__amtel b-pic__amtel_satellist"></span>&nbsp;
@@ -33,4 +34,7 @@
 	<span class="b-pic b-pic__amtel b-pic__amtel_client-mini"></span>&nbsp;
 	<span class="b-pic b-pic__amtel b-pic__amtel_cardgen-mini"></span>&nbsp;
 	<span class="b-pic b-pic__amtel b-pic__amtel_payment-mini"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_mini-enter"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_mini-exit"></span>&nbsp;
+	<span class="b-pic b-pic__amtel b-pic__amtel_mini-forget"></span>&nbsp;
 </div>
