refactor b-menu for dynamicaly build

--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -1,28 +1,11 @@
-<script>blib.include("b-/b-menu/b-menu");</script>
-
-<div class="b-menu" style="float:right; width:50%;">
+<div style="float:right; width:50%;">
     <div class="b-memu__selected-cell" style="border:1px solid black">сюда грузит выбраный пункт</div>
     <div class="b-memu__content" style="border:1px solid black">а сюда контент</div>
 </div>
-<div class="b-popup-menu b-popup-menu_style_default">
+<div class="b-popup-menu b-popup-menu_style_amtel">
     <div class="b-popup-menu__content b-popup-menu__content_closed">
-
         <div class="b-menu b-menu_transparent_off">
-            <div class="b-menu__cell" alt="марки">
-                <img src="p-/b-popup-menu/img/test.png" />
-            </div>
-
-            <div class="b-menu__cell" alt="коллекции" data-src="b-/b-train/b-train.html">
-                <img src="p-/b-popup-menu/img/test.png" />
-            </div>
-
-            <div class="b-menu__cell" alt="новости" >
-                <img src="p-/b-popup-menu/img/test.png" />
-            </div>
-
-            <div class="b-menu__cell" alt="вход">
-                <img src="p-/b-popup-menu/img/test.png" />
-            </div>
+            
         </div>
     </div>
     <div class="b-popup-menu__opener">
