deliver b-blib from b-blib-build

--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -1,5 +1,8 @@
-<div style="float:right; width:50%;">
-    <div class="b-memu__selected-cell" style="border:1px solid black">сюда грузит выбраный пункт</div>
+<div style="float:right; width:95%;">
+	<div style="border:1px solid black;">
+		<div class="b-memu__selected-cell" style="width:150px; float:left;">сюда грузит выбраный пункт</div>
+		<div class="b-request-history"></div>
+	</div>
     <div class="b-memu__content" style="border:1px solid black">а сюда контент</div>
 </div>
 <div class="b-popup-menu b-popup-menu_style_amtel">
