--- a/p-/b-index/b-index.html
+++ b/p-/b-index/b-index.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="b-/b-jquery/b-jquery.js">/*  <-  еслиб настройки были нормальные этих инклюдов небыло бы*/</script>			 
 	<script type="text/javascript" src="b-/b-jquery-ui/b-jquery-ui.js">/*  <-  еслиб настройки были нормальные этих инклюдов небыло бы*/</script>
 	<script type="text/javascript" src="b-/b-blib/b-blib.js"></script>
+	<script type="text/javascript" src="b-/b-blib-build/b-blib-build.js"></script>
 </head>
 <script>
 	blib.include("p-/b-index/b-index");/*  <-  еслиб настройки были нормальные этих инклюдов небыло бы*/
