--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -1,7 +1,11 @@
 <div style="float:right; width:95%;">
 	<div style="border:1px solid black;">
 		<div class="b-dynamic-menu__selected-cell" style="width:150px; float:left;">сюда грузит выбраный пункт</div>
-		<div class="b-request-history"></div>
+		<div class="b-dynamic-history__wrapper">
+			<div class="b-dynamic-history">
+				
+			</div>
+		</div>
 	</div>
     <div class="b-dynamic-menu__content" style="border:1px solid black">а сюда контент</div>
 </div>
