--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -7,7 +7,7 @@
 			</div>
 		</div>
 	</div>
-    <div class="b-dynamic-menu__content" style="border:1px solid black">а сюда контент</div>
+    <div class="b-dynamic-menu__content b-main-page__panel" style="border:1px solid black">а сюда контент</div>
 </div>
 <div class="b-popup-menu b-popup-menu_style_amtel">
     <div class="b-popup-menu__content b-popup-menu__content_closed">
