some correction with show

--- a/p-/b-popup-menu/b-popup-menu.html
+++ b/p-/b-popup-menu/b-popup-menu.html
@@ -1,19 +1,3 @@
-<div style="float:right; width:95%;">
-	<div style="border:1px solid black;">
-		<div class="b-dynamic-menu__selected-cell" style="width:150px; float:left;">сюда грузит выбраный пункт</div>
-		<div class="b-dynamic-history__wrapper">
-			<div class="b-dynamic-history">
-				
-			</div>
-		</div>
-	</div>
-    <div class=" b-dynamic-menu__content b-main-page__panel  b-main-page__panel" style="border:1px solid black">а сюда контент</div>
-</div>
-<div class="b-popup-menu b-popup-menu_style_amtel">
-    <div class="b-popup-menu__content b-popup-menu__content_closed">
-        
-    </div>
-    <div class="b-popup-menu__opener">
-        menu
-    </div>
+<div class="b-popup-test">
+
 </div>
