for show result popup menu

--- a/p-/b-index/b-index.html
+++ b/p-/b-index/b-index.html
@@ -10,6 +10,11 @@
 </head>
 <script>
 	blib.include("p-/b-index/b-index");/*  <-  еслиб настройки были нормальные этих инклюдов небыло бы*/
+    blib.include("b-/b-dynamic-files/b-dynamic-files");
+    blib.include("b-/b-dynamic-form/b-dynamic-form");
+    blib.include("b-/b-dynamic-menu/b-dynamic-menu");
+    blib.include("b-/b-dynamic-history/b-dynamic-history");
+    blib.include("b-/b-dynamic-table/b-dynamic-table");
 	// хорошая безопасность хостинга - залог бесполезного кода
 	// blib.vanishLoad({'script':false, 'order':["b-/b-jquery/b-jquery.js", "b-/b-jquery-ui/b-jquery-ui.js", "p-/b-index/b-index.js"]});
 </script>
