--- a/p-/b-index/b-index.html
+++ b/p-/b-index/b-index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="b-/b-blib-build/b-blib-build.js"></script>
 </head>
 <script>
+    blib.css("b-/b-grid/b-grid.css");
 	blib.include("p-/b-index/b-index");/*  <-  еслиб настройки были нормальные этих инклюдов небыло бы*/
     blib.include("b-/b-dynamic-files/b-dynamic-files");
     blib.include("b-/b-dynamic-form/b-dynamic-form");
